2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextUtil.cs:
	  changed next/prev word behaviour.

2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: No longer using
	  Thread.Abort ().

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Worked
	  on search&replace. (Bug 365439 - Replace usability issues)

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs: Fixed some
	  bugs caused by a former change.

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor/TextEditor.cs, Mono.TextEditor/GapBuffer.cs,
	  Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/LineSplitterTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SelectionTests.cs: Fixed Bug
	  365570 - Crash in the editor.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Support for escape
	  chars.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: Refactored status bar.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/TextEditorData.cs: Removed
	  some debug messages

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextMarker.cs: Added
	  draw routine for a caret marker.

2008-02-27  Mike Krüger <mkrueger@novell.com> 
